@@ -141,8 +141,7 @@ public class BibEntryWriter {
 
     private void writeEntryType(BibEntry entry, BibWriter out, BibDatabaseMode bibDatabaseMode) throws IOException {
         int start = out.getCurrentPosition();
-        TypedBibEntry typedEntry = new TypedBibEntry(entry, bibDatabaseMode);
-        out.write('@' + typedEntry.getTypeForDisplay());
+        out.write('@' + entry.getType().getDisplayName());
         int end = out.getCurrentPosition();
         fieldPositions.put(InternalField.TYPE_HEADER, new Range(start, end));
         out.write("{");
@@ -167,7 +166,7 @@ public class BibEntryWriter {
         Optional<String> value = entry.getField(field);
         // only write field if it is not empty
         // field.ifPresent does not work as an IOException may be thrown
-        if (value.isPresent() && !value.get().trim().isEmpty()) {
+        if (value.isPresent() && !value.get().isBlank()) {
             out.write("  ");
             out.write(getFormattedFieldName(field, indent));
             int start = out.getCurrentPosition();
